v0.5.1: (December 2011)
  - Incorporate B. Poettering's compilation fix, via ifdef.  Set
    USE_RESTORE_SECRET_WORKAROUND if you encounter an error about the
    definition of "restore_secret".

v0.5: (January 2006)
  - introduction of memory locking and tty echo suppression
  - a buffer overflow was fixed. It seems to be exploitable.

v0.4: (October 2005)
  - the security level now can be chosen freely in the range
      8..1024 bits in steps of 8.

v0.3: (July 2005)
  - separation of ssss into ssss-split and ssss-combine
  - introduction of a man page

v0.2: (June 2005)
  - introduction of the diffusion layer

v0.1: (May 2005)
  - initial release
